improve VYPER_PRIVATE_MODIFIER_DONT_HIDE_DATA

--- a/rule_descriptions/VYPER_PRIVATE_MODIFIER_DONT_HIDE_DATA/description_en.html
+++ b/rule_descriptions/VYPER_PRIVATE_MODIFIER_DONT_HIDE_DATA/description_en.html
@@ -1,3 +1,4 @@
 <p>
-    Initializing the variables without the <code>public</code> function defaults to a private declaration and thus only accessible to methods within the same contract. Contrary to a popular misconception, values of these variables are still accessible for users. Developers must account for the lack of privacy in Ethereum.
+    Initializing the variables without the <code>public</code> function defaults to a private declaration and thus only accessible to methods within the same contract. Contrary to a popular misconception, values of these variables are still accessible for users. Developers must account for the lack of privacy in Ethereum. 
+    This rule reports all structure's fields in structure definition but it is not the issue (it is false positive).
 </p>
