--- a/rule_descriptions/VYPER_PRIVATE_MODIFIER_DONT_HIDE_DATA/description.html
+++ b/rule_descriptions/VYPER_PRIVATE_MODIFIER_DONT_HIDE_DATA/description.html
@@ -1,3 +1,3 @@
 <p>
-    По умолчанию, переменные, не объявленные как <code>public</code>, являются недоступными для внешних контрактов и могут быть вызваны только из методов данного контракта. Вопреки распространенному заблуждению, значения этих переменных всё ещё остаются доступными пользователям. Разработчики должны учитывать отсутствие конфиденциальности в Ethereum.
+    По умолчанию, переменные, не объявленные как <code>public</code>, являются недоступными для внешних контрактов и могут быть вызваны только из методов данного контракта. Вопреки распространенному заблуждению, значения этих переменных всё ещё остаются доступными пользователям. Разработчики должны учитывать отсутствие конфиденциальности в Ethereum. (На элементах структур происходит ложное срабатывание паттерна)
 </p>
