--- a/rule_descriptions/SOLIDITY_ARRAY_LENGTH_MANIPULATION/description_en.html
+++ b/rule_descriptions/SOLIDITY_ARRAY_LENGTH_MANIPULATION/description_en.html
@@ -1,3 +1,7 @@
 <p>
 The length of the dynamic array is changed directly. In this case, the appearance of gigantic arrays is possible and it can lead to a storage overlap attack (collisions with other data in storage).
 </p>
+<p>
+    Vulnerability type by SmartDec classification: <a href="https://github.com/smartdec/classification#storage-access">
+    Overlap attack</a>.
+</p>
