--- a/rule_descriptions/SOLIDITY_BALANCE_EQUALITY/description_en.html
+++ b/rule_descriptions/SOLIDITY_BALANCE_EQUALITY/description_en.html
@@ -4,3 +4,7 @@
 <p>
     Avoid checking for strict balance equality: an adversary can forcibly send ether to any address via <code>selfdestruct()</code> or by mining.
 </p>
+<p>
+    Vulnerability type by SmartDec classification: <a href="https://github.com/smartdec/classification#ether-transfer">
+    Ether transfer</a>.
+</p>
