--- a/rule_descriptions/SOLIDITY_CONSTRUCTOR_RETURN/description_en.html
+++ b/rule_descriptions/SOLIDITY_CONSTRUCTOR_RETURN/description_en.html
@@ -1,3 +1,7 @@
 <p>
     <code>return</code> statement is used in contract's constructor. With <code>return</code> the process of deploy will differ from the intuitive one. For instance, deployed bytecode may not include functions implemented in the source.
 </p>
+<p>
+    Vulnerability type by SmartDec classification: <a href="https://github.com/smartdec/classification#internal-control-flow">
+    Assembly return in constructor</a>.
+</p>
