--- a/rule_descriptions/SOLIDITY_ERC20_APPROVE/description.html
+++ b/rule_descriptions/SOLIDITY_ERC20_APPROVE/description.html
@@ -1,3 +1,3 @@
 <p>
-Функция <code>approve</code> стандарта ERC-20 является уязвимой.
+    Функция <code>approve</code> стандарта ERC-20 является уязвимой. Средства могут быть потрачены до того, как изменится значение <code>allowance</code>.
 </p>
