--- a/rule_descriptions/SOLIDITY_EXACT_TIME/description_en.html
+++ b/rule_descriptions/SOLIDITY_EXACT_TIME/description_en.html
@@ -1,3 +1,7 @@
 <p>
     Strict comparison with <code>block.timestamp</code> or <code>now</code>. Miners can affect <code>block.timestamp</code> for their benefits. Thus, one should not rely on the exact value of <code>block.timestamp</code>.
 </p>
+<p>
+    Vulnerability type by SmartDec classification: <a href="https://github.com/smartdec/classification#block-content-manipulation">
+    Timestamp manipulation</a>.
+</p>
