--- a/rule_descriptions/SOLIDITY_EXTRA_GAS_IN_LOOPS/description.html
+++ b/rule_descriptions/SOLIDITY_EXTRA_GAS_IN_LOOPS/description.html
@@ -1,1 +1,3 @@
-<p>В условии цикла <code>for</code> или <code>while</code> происходит обращение к <code>storage</code> контракта, либо к полям <code>.balance</code>/<code>.length</code>. Таким образом, на каждом шаге цикла тратится большое количество газа на чтение.</p>
+<p>
+    В условии цикла <code>for</code> или <code>while</code> происходит обращение к <code>storage</code> контракта, <code>.length</code> массива, не находящегося в <code>memory</code>, либо к полю <code>.balance</code>. Таким образом, на каждом шаге цикла тратится большое количество газа на чтение.
+</p>
