--- a/rule_descriptions/SOLIDITY_EXTRA_GAS_IN_LOOPS/description_en.html
+++ b/rule_descriptions/SOLIDITY_EXTRA_GAS_IN_LOOPS/description_en.html
@@ -1,1 +1,3 @@
-<p>State variable, <code>.balance</code>, or <code>.length</code> is used in the condition of <code>for</code> or <code>while</code> loop. In this case, every iteration of loop consumes extra gas.</p>
+<p>
+    State variable, <code>.balance</code>, or <code>.length</code> of non-memory array is used in the condition of <code>for</code> or <code>while</code> loop. In this case, every iteration of loop consumes extra gas.
+</p>
