--- a/rule_descriptions/SOLIDITY_EXTRA_GAS_IN_LOOPS/recommendation.html
+++ b/rule_descriptions/SOLIDITY_EXTRA_GAS_IN_LOOPS/recommendation.html
@@ -1,1 +1,4 @@
-<p>В случаях, когда переменные, хранящиеся в <code>storage</code> контракта, а также поля <code>.balance</code> и <code>.length</code>, используются несколько раз, рекомендуется записывать их значения в локальные переменные.</p>
+<p>
+    В случаях, когда переменные, хранящиеся в <code>storage</code> контракта, а также поля <code>.balance</code> и <code>.length</code>, используются несколько раз, рекомендуется записывать их значения в локальные переменные.
+    При этом в случае, когда происходит обращение к длине массива, находящегося в <code>calldata</code>, оптимизация будет менее значимой.
+</p>
