--- a/rule_descriptions/SOLIDITY_EXTRA_GAS_IN_LOOPS/recommendation_en.html
+++ b/rule_descriptions/SOLIDITY_EXTRA_GAS_IN_LOOPS/recommendation_en.html
@@ -1,1 +1,4 @@
-<p>If state variable, <code>.balance</code>, or <code>.length</code> is used several times, holding its value in a local variable is more gas efficient.</p>
+<p>
+    If state variable, <code>.balance</code>, or <code>.length</code> is used several times, holding its value in a local variable is more gas efficient.
+    If <code>.length</code> of <code>calldata</code>-array is placed into local variable, the optimisation will be less significant.
+</p>
