--- a/rule_descriptions/SOLIDITY_GAS_LIMIT_IN_LOOPS/description_en.html
+++ b/rule_descriptions/SOLIDITY_GAS_LIMIT_IN_LOOPS/description_en.html
@@ -10,3 +10,7 @@
     This becomes a security issue, if an external actor influences <code>array.length</code>.
     E.g., if array enumerates all registered addresses, an adversary can register many addresses, causing the problem described above.
 </p>
+<p>
+    Vulnerability type by SmartDec classification: <a href="https://github.com/smartdec/classification#gas-limitations">
+    Infinite loops</a>.
+</p>
