--- a/rule_descriptions/SOLIDITY_TX_ORIGIN/description_en.html
+++ b/rule_descriptions/SOLIDITY_TX_ORIGIN/description_en.html
@@ -1,3 +1,7 @@
 <p>
-    <code>tx.origin</code> used for authorization.
+    <code>tx.origin</code> is used for authorization.
+</p>
+<p>
+    Vulnerability type by SmartDec classification: <a href="https://github.com/smartdec/classification#authorization">
+    Authorization with tx.origin</a>.
 </p>
