--- a/rule_descriptions/SOLIDITY_DIV_MUL/description_en.html
+++ b/rule_descriptions/SOLIDITY_DIV_MUL/description_en.html
@@ -1,3 +1,7 @@
 <p>
     Solidity operates only with integers. Thus, if the division is done before the  multiplication, the rounding errors can increase dramatically.
 </p>
+<p>
+    Vulnerability type by SmartDec classification: <a href="https://github.com/smartdec/classification#arithmetic">
+    Precision issues</a>.
+</p>
