--- a/rule_descriptions/SOLIDITY_ERC20_APPROVE/description_en.html
+++ b/rule_descriptions/SOLIDITY_ERC20_APPROVE/description_en.html
@@ -1,3 +1,3 @@
 <p>
-The <code>approve</code> function of ERC-20 might lead to vulnerabilities.
+    The <code>approve</code> function of ERC-20 is vulnerable. Using front-running attack one can spend approved tokens before change of <code>allowance</code> value.
 </p>
