--- a/rule_descriptions/SOLIDITY_OVERPOWERED_ROLE/description_en.html
+++ b/rule_descriptions/SOLIDITY_OVERPOWERED_ROLE/description_en.html
@@ -1,3 +1,7 @@
 <p>
     This function is callable only from one address. Therefore, the system depends heavily on this address. In this case, there are scenarios that may lead to undesirable consequences for investors, e.g. if the private key of this address becomes compromised.
 </p>
+<p>
+    Vulnerability type by SmartDec classification: <a href="https://github.com/smartdec/classification#trust">
+    Overpowered owner</a>.
+</p>
