--- a/rule_descriptions/SOLIDITY_PRIVATE_MODIFIER_DOES_NOT_HIDE_DATA/description_en.html
+++ b/rule_descriptions/SOLIDITY_PRIVATE_MODIFIER_DOES_NOT_HIDE_DATA/description_en.html
@@ -1,3 +1,7 @@
 <p>
     Contrary to a popular misconception, the <code>private</code> modifier does not make a variable invisible. Miners have access to all contracts’ code and data. Developers must account for the lack of privacy in Ethereum.
 </p>
+<p>
+    Vulnerability type by SmartDec classification: <a href="https://github.com/smartdec/classification#privacy">
+    Privacy</a>.
+</p>
