--- a/rule_descriptions/SOLIDITY_TRANSFER_IN_LOOP/description_en.html
+++ b/rule_descriptions/SOLIDITY_TRANSFER_IN_LOOP/description_en.html
@@ -1,3 +1,7 @@
 <p>
     ETH is transferred in a loop. If at least one address cannot receive ETH (e.g. it is a contract with default fallback function), the whole transaction will be reverted.
 </p>
+<p>
+    Vulnerability type by SmartDec classification: <a href="https://github.com/smartdec/classification#contract-interaction">
+    DoS with revert</a>.
+</p>
